# next_event

./: .gitignore  README.md  build_next_event.py  build_next_ufc_event.py  next_event_to_json.py  pyproject.toml
next_events/: scrapy.cfg
next_events/next_events/: items.py  middlewares.py  pipelines.py  settings.py
next_events/next_events/spiders/: entry_point.py  ufc.py
next_events/next_events/spiders/tool_box/: tools.py
tests/: test_betting_tools.py  test_build_next_ufc_event.py  test_combine_event_odds.py  test_event_tools.py  test_next_event.py  test_tools.py
tool_box/: betting_tools.py  combine_event_odds.py  event_tools.py  tools.py
