[tool.poetry]
name = "next_event"
version = "0.1.0"
description = ""
authors = ["Jeremy Rodrigues <jeremy.rodrigues@therealreal.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scrapy = "^1.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
