[tool.poetry]
name = "next_event"
version = "0.1.0"
description = ""
authors = ["Jeremy Rodrigues <jeremy.rodrigues@therealreal.com>"]

[tool.poetry.dependencies]
python = "^3.7"
arrow = "^0.15.1"
requests = "^2.22"
requests_html = "^0.10.0"
geonamescache = "^1.1"
pendulum = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
